tests/negative/scope/aliasing-object-from-unknown-package-imported/beta.smol
package beta;

import gamma:Foo;

interface Foo {}
